<resources>
    <string name="app_name">小指南针</string>
    <string name='loginbtn'>登录</string>
    <string name="id_tv_username">用户名</string>
    <string name="id_tv_password">密码</string>
    <string name="inputusername">请输入用户名</string>
    <string name="inputpassword">请输入密码</string>
    <string name="tv_password">记住密码</string>
    <string name="tv_autologin">自动登录</string>
    <string name="registerbtn">注册</string>
    <string name="inputpasswordSec">确认密码</string>
    <string name="backtologinbtn">返回登录</string>
    <string name="logout">退出</string>
    <string name="logining">正在登录...</string>
</resources>
