<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/liner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1_r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/id_tv_username"
            android:textStyle="bold"
             />

        <EditText
            android:id="@+id/edit1_r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/inputusername"
            android:textSize="15sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2_r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/id_tv_password"
            android:textStyle="bold"
             />
        <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <EditText
                android:id="@+id/edit2_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputpassword"
                android:inputType="textPassword"
                android:textSize="15sp"
                />
            <ImageView
                android:id="@+id/iv_see_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/image_password_bg"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:scaleType="fitXY"
                />
        </RelativeLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3_r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/inputpasswordSec"
            android:textStyle="bold"
            />
        <RelativeLayout
            android:id="@+id/RelativeLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <EditText
                android:id="@+id/edit3_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputpassword"
                android:inputType="textPassword"
                android:textSize="15sp"
                />
            <ImageView
                android:id="@+id/iv_see_password2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/image_password_bg"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:scaleType="fitXY"
                />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnid_registerui"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/registerbtn"/>
        <Button
            android:id="@+id/btnid_backtologin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/backtologinbtn" />



    </LinearLayout>




</LinearLayout>
