<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:paddingTop="80dp"
    android:paddingLeft="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/id_tv_username"
           />

        <EditText
            android:id="@+id/edit1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/inputusername"
            android:textSize="15sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_weight="2"
            android:text="@string/id_tv_password"
            />
        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <EditText
                android:id="@+id/edit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputpassword"
                android:inputType="textPassword"
                android:textSize="15sp"
                />
            <ImageView
                android:id="@+id/iv_see_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/image_password_bg"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:scaleType="fitXY"
                />
            </RelativeLayout>


    </LinearLayout>

    <!--<LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        >
        <CheckBox
            android:id="@+id/id_checkbox1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_password"
             />

        <CheckBox
            android:id="@+id/id_checkbox2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/tv_autologin"/>

    </LinearLayout>-->
    <RelativeLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"

        >
        <CheckBox
            android:id="@+id/id_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/tv_password"
            />

        <CheckBox
            android:id="@+id/id_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/tv_autologin"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnid_login"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/loginbtn" />
        <Button
            android:id="@+id/btnid_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/registerbtn"/>

    </LinearLayout>




</LinearLayout>
